--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,12 @@
     "resolveJsonModule": true
   },
   "include": [
-    "src/**/*"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
     "dist",
-    ".wrangler"
+    ".wrangler",
+    "**/*.d.ts"
   ]
 }
