--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,10 +27,10 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Inject version information
+    - name: Build TypeScript and Svelte
       run: |
-        echo "🔧 Injecting version info..."
-        node scripts/build.js
+        echo "🔧 Building TypeScript and Svelte..."
+        npm run build
 
     - name: Deploy to Cloudflare Workers (Production)
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
