--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "resolveJsonModule": true
   },
   "include": [
-    "src/**/*.ts",
-    "src/svelte/types/global.d.ts"
+    "src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
