--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,9 @@
     "resolveJsonModule": true
   },
   "include": [
-    "src/**/*.ts"
+    "src/**/*.ts",
+    "src/**/*.svelte",
+    "src/**/*.svelte.ts"
   ],
   "exclude": [
     "node_modules",
