--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chatty - OpenRouter Terminal Chat",
+  "name": "Chatty - Terminal Chat",
   "short_name": "Chatty",
   "description": "Free AI Chat at openrouter tester with multi-language optimization",
   "start_url": "/",
