--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "terminal-openrouter-chat",
-  "version": "1.0.15",
+  "name": "Chatty",
+  "version": "1.0.16",
   "description": "Terminal-style chat interface using OpenRouter free models with Korean language optimization",
   "main": "src/index.ts",
   "type": "module",
