--- a/wrangler.toml
+++ b/wrangler.toml
@@ -14,3 +14,7 @@ binding = "DB" # Worker에서 env.DB로 접근 가능
 database_name = "chat-contexts"
 database_id = "a41896bf-d115-4d65-aa9b-36213d77db77"
 migrations_dir = "migrations"
+
+# Environment variables
+[vars]
+# These will be available in production. For development, use .dev.vars file.
